vpc.tf
data "aws_availbilty_zones" "available" {
    state ="available"
}


# The Core Virtual Private Cloud
resource "aws_vpc" "main"{
  cidr_block            = var.vpc_cidr
  enable_dns_hostnames  = true
  enable_dns_support    = true

  tags= {
    Name = "${var.project_name}-vpc"
  }
}

# Public Subnets

resource "aws_subnet" "public_1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.1.0/24"
  availbilty_zones  = data.aws_availbilty_zones.available.names[0]
  map_public_ip_on_launch = true

  tags{
    Name = "${var.project_name}-public-subnet-1"
  }
}

resource "aws_subnet" "public_2" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.2.0/24"
  availbilty_zones  = data.aws_availbilty_zones.available.names[1]
  map_public_ip_on_launch = true

  tags{
    Name = "${var.project_name}-public-subnet-2"
  }
}

# Privet subnets
resource "aws_subnet" "private_1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.10.0/24"
  availbilty_zones  = data.aws_availbilty_zones.available.names[0]


  tags{
    Name = "${var.project_name}-private-subnet-1"
  }
}

resource "aws_subnet" "private_2" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.11.0/24"
  availbilty_zones  = data.aws_availbilty_zones.available.names[0]


  tags{
    Name = "${var.project_name}-private-subnet-2"
  }
}

#Internet Gateway
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "${var.project_name}-igw"
  }
}

# Routing Tables
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  tags = {
    Name = "${var.project_name}-public-rt"
  }
}

resource "aws_route_table_association" "public_1" {
  subnet_id      = aws_subnet.public_1.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public_2" {
  subnet_id      = aws_subnet.public_2.id
  route_table_id = aws_route_table.public.id
}
